fix: send button covering the text in the textarea

--- a/app/components/home.module.scss
+++ b/app/components/home.module.scss
@@ -410,7 +410,7 @@
   background-color: var(--white);
   color: var(--black);
   font-family: inherit;
-  padding: 10px 14px;
+  padding: 10px 14px 50px;
   resize: none;
   outline: none;
 }
